▲ Use Next.js instead of plain HTML

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
   // Misc
   "files.exclude": {
     "node_modules/": true,
-    "yarn.lock": true
+    "yarn.lock": true,
+    ".next/": true,
+    "out/": true
   }
 }
