--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   }
 }
