--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
+    "type:check": "tsc",
     "style:check": "prettier --check .",
     "style:format": "prettier --write ."
   },
@@ -17,6 +18,8 @@
     "webpack": "^5.11.0"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.3",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
