--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~components/*": ["components/*"]
+      "~components/*": ["components/*"],
+      "~mdx/*": ["mdx/*"]
     },
     "allowJs": false,
     "strict": true,
