--- a/package.json
+++ b/package.json
@@ -7,10 +7,28 @@
   "license": "UNLICENSED",
   "private": false,
   "scripts": {
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
+    "type:check": "tsc",
     "style:check": "prettier --check .",
     "style:format": "prettier --write ."
   },
+  "resolutions": {
+    "webpack": "^5.11.0"
+  },
+  "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.3",
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   }
 }
