--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "remark-frontmatter": "^2.0.0",
+    "typescript": "^4.1.3",
+    "unist-util-find": "^1.0.2",
+    "yaml": "^1.10.0"
   }
 }
