--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "webpack": "^5.11.0"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.3",
     "next": "^10.0.3",
@@ -28,11 +27,14 @@
   },
   "devDependencies": {
     "@fec/remark-a11y-emoji": "^3.0.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/mdx": "^1.6.22",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "prettier": "^2.2.1",
     "remark-frontmatter": "^2.0.0",
+    "to-vfile": "^6.1.0",
     "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
     "yaml": "^1.10.0"
