--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
-    "distribute:dev.to": "node scripts/distribute-to-devto.js",
+    "distribute:dev.to": "node scripts/distribute-devto.js",
     "type:check": "tsc",
     "style:check": "prettier --check .",
     "style:format": "prettier --write ."
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^10.0.3",
     "next": "^10.0.3",
     "next-seo": "^4.17.0",
     "react": "^17.0.1",
@@ -29,13 +28,14 @@
   "devDependencies": {
     "@fec/remark-a11y-emoji": "^3.0.0",
     "@mdx-js/loader": "^1.6.22",
-    "@mdx-js/mdx": "^1.6.22",
+    "@next/mdx": "^10.0.3",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.0",
+    "gray-matter": "^4.0.2",
     "prettier": "^2.2.1",
     "remark-frontmatter": "^2.0.0",
-    "to-vfile": "^6.1.0",
     "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
     "yaml": "^1.10.0"
