--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
-    "distribute:dev.to": "node scripts/distribute-devto.js",
     "type:check": "tsc",
     "style:check": "prettier --check .",
     "style:format": "prettier --write ."
@@ -20,6 +19,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
+    "axios": "^0.21.0",
     "next": "^10.0.3",
     "next-seo": "^4.17.0",
     "react": "^17.0.1",
@@ -32,12 +32,13 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "axios": "^0.21.0",
     "gray-matter": "^4.0.2",
+    "mdast-util-to-markdown": "^0.6.1",
     "prettier": "^2.2.1",
     "remark-frontmatter": "^2.0.0",
     "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
+    "unist-util-visit": "^2.0.3",
     "yaml": "^1.10.0"
   }
 }
