--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "glob": "^7.1.6",
     "gray-matter": "^4.0.2",
     "mdast-util-to-markdown": "^0.6.1",
     "prettier": "^2.2.1",
