--- a/.github/workflows/devto.yml
+++ b/.github/workflows/devto.yml
@@ -2,15 +2,28 @@ name: DEV.to Distribution
 
 on: push
 
+env:
+  node-version: 14
+
 jobs:
   create-an-article:
     name: Create an article
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup Node.js
+      - name: Setup Node.js ${{ env.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: ${{ env.node-version }}
+      - name: Get Yarn cache directory
+        id: get-yarn-cache-dir
+        run: echo "::set-output name=path::$(yarn cache dir)"
+      - name: Apply Yarn cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.get-yarn-cache-dir.outputs.path }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - run: yarn install
