--- a/.github/workflows/devto.yml
+++ b/.github/workflows/devto.yml
@@ -23,7 +23,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ steps.get-yarn-cache-dir.outputs.path }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: "${{ runner.os }}-node-${{ env.node-version }}-yarn-\
+            ${{ hashFiles('**/yarn.lock') }}"
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-node-${{ env.node-version }}-yarn-
       - run: yarn install
