--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^17.0.0",
     "glob": "^7.1.6",
     "gray-matter": "^4.0.2",
+    "logplease": "^1.2.15",
     "mdast-util-to-markdown": "^0.6.1",
     "prettier": "^2.2.1",
     "remark-frontmatter": "^2.0.0",
