--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
-    "gen:dev.to": "node scripts/devto-gen.js",
+    "devto-sync": "node bin/devto-sync.js",
     "type:check": "tsc",
     "style:check": "prettier --check .",
     "style:format": "prettier --write ."
@@ -33,9 +33,11 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "chalk": "^4.1.0",
     "glob": "^7.1.6",
     "gray-matter": "^4.0.2",
     "logplease": "^1.2.15",
+    "md5": "^2.3.0",
     "mdast-util-to-markdown": "^0.6.1",
     "prettier": "^2.2.1",
     "remark-frontmatter": "^2.0.0",
