Add git commit and push

--- a/.github/workflows/devto-sync.yml
+++ b/.github/workflows/devto-sync.yml
@@ -31,3 +31,10 @@ jobs:
             ${{ runner.os }}-node-${{ env.node-version }}-yarn-
       - run: yarn install --frozen-lockfile
       - run: yarn devto-sync
+        env:
+          DEVTO_API_KEY: ${{ secrets.DEVTO_API_KEY }}
+      - name: Commit and push
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "🤖 Sync DEV.to articles"
+          token: ${{ secrets.ADMIN_GH_TOKEN }}
