--- a/.github/workflows/devto-sync.yml
+++ b/.github/workflows/devto-sync.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.ADMIN_GH_TOKEN }}
       - name: Setup Node.js ${{ env.node-version }}
         uses: actions/setup-node@v2
         with:
@@ -37,4 +39,3 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "🤖 Sync DEV.to articles"
-          token: ${{ secrets.ADMIN_GH_TOKEN }}
