--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "style:format": "prettier --write ."
   },
   "resolutions": {
-    "webpack": "^5.11.0"
+    "webpack": "^5.11.0",
+    "source-map-resolve": "^0.6.0"
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
