--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: DEV.to Sync
+name: Sync
 
 on:
   push:
@@ -32,10 +32,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-${{ env.node-version }}-yarn-
       - run: yarn install --frozen-lockfile
-      - run: yarn devto-sync
+      - run: yarn sync
         env:
           DEVTO_API_KEY: ${{ secrets.DEVTO_API_KEY }}
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "🤖 Sync DEV.to articles"
+          commit_message: "🤖 Sync articles to DEV.to"
