--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
     "gray-matter": "^4.0.2",
     "md5": "^2.3.0",
     "prettier": "^2.2.1",
+    "remark": "^12.0.1",
     "remark-frontmatter": "^2.0.0",
+    "remark-squeeze-paragraphs": "^4.0.0",
+    "to-vfile": "^6.1.0",
     "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
+    "unist-util-remove": "^2.0.1",
     "unist-util-visit": "^2.0.3",
     "yaml": "^1.10.0"
   }
