--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "🤖 Sync articles to DEV.to"
+          commit_message: "🤖 Auto-sync articles to DEV.to"
