--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@fec/remark-a11y-emoji": "^3.0.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.3",
     "@types/node": "^14.14.14",
@@ -39,6 +38,7 @@
     "gray-matter": "^4.0.2",
     "md5": "^2.3.0",
     "prettier": "^2.2.1",
+    "rehype-accessible-emojis": "^0.3.2",
     "remark": "^12.0.1",
     "remark-frontmatter": "^2.0.0",
     "remark-squeeze-paragraphs": "^4.0.0",
