--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^17.0.0",
     "chalk": "^4.1.0",
     "glob": "^7.1.6",
+    "jsonc-parser": "^3.0.0",
     "md5": "^2.3.0",
     "prettier": "^2.2.1",
     "rehype-accessible-emojis": "^0.3.2",
