--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "hashnode-sdk-js": "^0.0.2",
     "next": "^10.0.3",
     "next-seo": "^4.17.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
