--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.1.0",
     "chalk": "^4.1.0",
     "glob": "^7.1.6",
     "jsonc-parser": "^3.0.0",
     "md5": "^2.3.0",
+    "postcss": "^8.2.1",
     "prettier": "^2.2.1",
     "rehype-accessible-emojis": "^0.3.2",
     "remark": "^12.0.1",
@@ -50,6 +52,7 @@
     "remark-unwrap-texts": "^1.0.2",
     "revalidator": "^0.3.1",
     "sass": "^1.30.0",
+    "tailwindcss": "^2.0.2",
     "to-vfile": "^6.1.0",
     "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
