--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "hashnode-sdk-js": "^1.0.1",
     "next": "^10.0.3",
     "next-seo": "^4.17.0",
     "normalize.css": "^8.0.1",
+    "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -37,12 +40,10 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "autoprefixer": "^10.1.0",
     "chalk": "^4.1.0",
     "glob": "^7.1.6",
     "jsonc-parser": "^3.0.0",
     "md5": "^2.3.0",
-    "postcss": "^8.2.1",
     "prettier": "^2.2.1",
     "rehype-accessible-emojis": "^0.3.2",
     "remark": "^12.0.1",
@@ -52,7 +53,6 @@
     "remark-unwrap-texts": "^1.0.2",
     "revalidator": "^0.3.1",
     "sass": "^1.30.0",
-    "tailwindcss": "^2.0.2",
     "to-vfile": "^6.1.0",
     "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
