--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "hashnode-sdk-js": "^1.0.1",
     "next": "^10.0.3",
     "next-seo": "^4.17.0",
-    "normalize.css": "^8.0.1",
+    "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -49,7 +51,6 @@
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-texts": "^1.0.2",
     "revalidator": "^0.3.1",
-    "sass": "^1.30.0",
     "to-vfile": "^6.1.0",
     "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
