--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "phuctm97.com",
   "version": "0.0.0",
-  "description": "💁🏻‍♂️ My personal website.",
   "repository": "https://github.com/phuctm97/phuctm97.com",
-  "author": "Minh-Phuc Tran <me@phuctm97.com> (https://phuctm97.com)",
+  "author": {
+    "name": "Minh-Phuc Tran",
+    "email": "me@phuctm97.com",
+    "url": "https://phuctm97.com"
+  },
   "license": "MIT",
   "private": false,
   "scripts": {
@@ -16,34 +19,26 @@
     "crosspost:devto": "node bin/crosspost-devto.js",
     "crosspost:hashnode": "node bin/crosspost-hashnode.js"
   },
-  "resolutions": {
-    "webpack": "^5.11.0",
-    "source-map-resolve": "^0.6.0"
+  "engines": {
+    "node": "12.x"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^10.0.3",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
+    "chalk": "^4.1.0",
+    "glob": "^7.1.6",
     "hashnode-sdk-js": "^1.0.1",
+    "jsonc-parser": "^3.0.0",
+    "md5": "^2.3.0",
     "next": "^10.0.3",
     "next-seo": "^4.17.0",
     "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
-    "tailwindcss": "^2.0.2"
-  },
-  "devDependencies": {
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^10.0.3",
-    "@types/node": "^14.14.14",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "chalk": "^4.1.0",
-    "glob": "^7.1.6",
-    "jsonc-parser": "^3.0.0",
-    "md5": "^2.3.0",
-    "prettier": "^2.2.1",
     "rehype-accessible-emojis": "^0.3.2",
     "remark": "^12.0.1",
     "remark-frontmatter": "^2.0.0",
@@ -51,11 +46,18 @@
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-texts": "^1.0.2",
     "revalidator": "^0.3.1",
+    "tailwindcss": "^2.0.2",
     "to-vfile": "^6.1.0",
-    "typescript": "^4.1.3",
     "unist-util-find": "^1.0.2",
     "unist-util-remove": "^2.0.1",
     "unist-util-visit": "^2.0.3",
     "yaml": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   }
 }
