--- a/.github/workflows/crosspost.yml
+++ b/.github/workflows/crosspost.yml
@@ -5,13 +5,13 @@ on:
     branches: [master]
 
 env:
-  NODE_VERSION: 14
+  NODE_VERSION: 12
   FORCE_COLOR: 3
 
 jobs:
   crosspost-to-devto:
     name: Cross-post to DEV.to
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Checkout
@@ -43,7 +43,7 @@ jobs:
 
   crosspost-to-hashnode:
     name: Cross-post to Hashnode
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Checkout
@@ -76,7 +76,7 @@ jobs:
 
   persist-crosspost-metadata:
     name: Persist Crosspost metadata
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: [crosspost-to-devto, crosspost-to-hashnode]
     steps:
       - name: Checkout
