--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": "12.x"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.5.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.3",
