--- a/.github/workflows/crosspost.yml
+++ b/.github/workflows/crosspost.yml
@@ -99,3 +99,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "🤖 Auto cross-post articles [skip ci]"
+          commit_user_name: github-actions[bot]
+          commit_user_email: github-actions[bot]@users.noreply.github.com
