--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "rehype-accessible-emojis": "^0.3.2",
     "remark": "^12.0.1",
     "remark-frontmatter": "^2.0.0",
-    "remark-parse-frontmatter": "^1.0.1",
+    "remark-parse-frontmatter": "^1.0.2",
     "remark-squeeze-paragraphs": "^4.0.0",
     "remark-unwrap-texts": "^1.0.2",
     "revalidator": "^0.3.1",
@@ -52,9 +52,11 @@
     "unist-util-find": "^1.0.2",
     "unist-util-remove": "^2.0.1",
     "unist-util-visit": "^2.0.3",
+    "vfile": "^4.2.1",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
