--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.3",
+    "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "chalk": "^4.1.0",
