--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "~components/*": ["components/*"],
+      "~layouts/*": ["layouts/*"],
       "~styles/*": ["styles/*"],
       "~utils/*": ["utils/*"]
     },
