--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "chalk": "^4.1.0",
+    "classnames": "^2.2.6",
     "glob": "^7.1.6",
     "hashnode-sdk-js": "^1.0.1",
     "jsonc-parser": "^3.0.0",
     "md5": "^2.3.0",
     "next": "^10.0.3",
     "next-seo": "^4.17.0",
+    "next-themes": "^0.0.10",
     "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -57,6 +59,7 @@
     "yaml": "^1.10.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
