--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "baseUrl": ".",
     "paths": {
       "~components/*": ["components/*"],
+      "~layouts/*": ["layouts/*"],
       "~styles/*": ["styles/*"],
+      "~hooks/*": ["hooks/*"],
       "~utils/*": ["utils/*"]
     },
     "allowJs": true,
