--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "~pages/*": ["pages/*"],
       "~components/*": ["components/*"],
       "~layouts/*": ["layouts/*"],
       "~styles/*": ["styles/*"],
       "~hooks/*": ["hooks/*"],
       "~utils/*": ["utils/*"]
     },
-    "allowJs": true,
+    "allowJs": false,
     "strict": true,
     "alwaysStrict": true,
     "target": "esnext",
