--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@next/mdx": "^10.0.4",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
+    "classnames": "^2.2.6",
     "next": "^10.0.4",
     "postcss": "^8.2.2",
     "react": "^17.0.1",
