--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
+    "glob": "^7.1.6",
     "next": "^10.0.4",
     "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "remark": "^12.0.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
