--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "~layouts/*": ["layouts/*"],
       "~styles/*": ["styles/*"],
       "~hooks/*": ["hooks/*"],
-      "~utils/*": ["utils/*"]
+      "~utils/*": ["utils/*"],
+      "~lib/*": ["lib/*"]
     },
     "allowJs": false,
     "strict": true,
