--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
     "glob": "^7.1.6",
+    "mdast-util-to-markdown": "^0.6.2",
+    "mdast-util-to-string": "^2.0.0",
     "next": "^10.0.4",
     "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^12.0.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "unist-util-select": "^3.0.4",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
