--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^12.0.1",
+    "remark-frontmatter": "^2.0.0",
     "tailwindcss": "^2.0.2",
     "unist-util-select": "^3.0.4",
     "unist-util-visit": "^2.0.3"
