--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "react-dom": "^17.0.1",
     "remark": "^12.0.1",
     "remark-frontmatter": "^2.0.0",
+    "remark-parse-frontmatter": "^1.0.2",
     "tailwindcss": "^2.0.2",
     "unist-util-select": "^3.0.4",
-    "unist-util-visit": "^2.0.3"
+    "unist-util-visit": "^2.0.3",
+    "vfile": "^4.2.1"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
