Support Dark mode

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "mdast-util-to-markdown": "^0.6.2",
     "mdast-util-to-string": "^2.0.0",
     "next": "^10.0.4",
+    "next-themes": "^0.0.10",
     "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "remark-frontmatter": "^2.0.0",
     "remark-parse": "^8.0.3",
     "remark-parse-frontmatter": "^1.0.2",
