--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mdast-util-to-markdown": "^0.6.2",
     "mdast-util-to-string": "^2.0.0",
     "next": "^10.0.4",
+    "next-seo": "^4.17.0",
     "next-themes": "^0.0.10",
     "postcss": "^8.2.2",
     "react": "^17.0.1",
