--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://phuctm97.com"
   },
   "site": {
-    "title": "Minh-Phuc Tran — Software Engineer",
+    "title": "Minh-Phuc Tran - Software Engineer",
     "openGraph": {
       "type": "website",
       "locale": "en_US",
