--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build": "next build",
+    "build": "build:lib && build:app",
+    "build:app": "next build",
+    "build:lib": "tsc -p lib/tsconfig.json && tsc-alias -p lib/tsconfig.json",
     "type:check": "tsc",
     "style:check": "prettier --check .",
     "style:format": "prettier --write ."
@@ -69,11 +71,13 @@
     "vfile": "^4.2.1"
   },
   "devDependencies": {
+    "@tsconfig/node12": "^1.0.7",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "prettier": "^2.2.1",
+    "tsc-alias": "^1.2.0",
     "typescript": "^4.1.3"
   }
 }
