--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/unist": "^2.0.3",
     "prettier": "^2.2.1",
     "tsc-alias": "^1.2.0",
     "typescript": "^4.1.3"
