--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/revalidator": "^0.3.7",
     "@types/unist": "^2.0.3",
     "prettier": "^2.2.1",
     "tsc-alias": "^1.2.0",
