--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
   "name": "phuctm97.com",
-  "version": "0.0.0",
+  "version": "2.0.0",
+  "description": "🏚 Home on the Web — Everything I learned and created: software dev, programming tutorials, career, startups, and open-source.",
+  "homepage": "https://phuctm97.com",
   "repository": "https://github.com/phuctm97/phuctm97.com",
   "author": {
     "name": "Minh-Phuc Tran",
     "email": "me@phuctm97.com",
     "url": "https://phuctm97.com"
   },
+  "site": {
+    "title": "Minh-Phuc Tran - Software Engineer",
+    "openGraph": {
+      "type": "website",
+      "locale": "en_US",
+      "images": [
+        {
+          "url": "/static/og.png",
+          "width": 1200,
+          "height": 628
+        }
+      ]
+    },
+    "twitter": {
+      "handle": "@phuctm97",
+      "site": "@phuctm97",
+      "cardType": "summary_large_image"
+    }
+  },
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "next dev",
+    "dev": "yarn build:lib && next dev",
+    "build": "yarn build:lib && next build",
     "start": "next start",
-    "build": "next build",
-    "type:check": "tsc",
+    "build:lib": "tsc -p lib/tsconfig.json && tsc-alias -p lib/tsconfig.json",
+    "type:check": "tsc && tsc -p lib/tsconfig.json --noEmit",
     "style:check": "prettier --check .",
-    "style:format": "prettier --write .",
-    "crosspost:devto": "node bin/crosspost-devto.js",
-    "crosspost:hashnode": "node bin/crosspost-hashnode.js"
+    "style:format": "prettier --write ."
   },
   "engines": {
     "node": "12.x"
@@ -26,45 +46,40 @@
     "@mapbox/rehype-prism": "^0.5.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^10.0.3",
+    "@next/mdx": "^10.0.4",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
-    "axios": "^0.21.0",
-    "chalk": "^4.1.0",
     "classnames": "^2.2.6",
     "glob": "^7.1.6",
-    "hashnode-sdk-js": "^1.0.1",
-    "jsonc-parser": "^3.0.0",
-    "md5": "^2.3.0",
-    "next": "^10.0.3",
+    "mdast-util-to-markdown": "^0.6.2",
+    "mdast-util-to-string": "^2.0.0",
+    "next": "^10.0.4",
     "next-seo": "^4.17.0",
     "next-themes": "^0.0.10",
-    "postcss": "^8.2.1",
+    "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "rehype-accessible-emojis": "^0.3.2",
-    "remark": "^12.0.1",
     "remark-frontmatter": "^2.0.0",
+    "remark-parse": "^8.0.3",
     "remark-parse-frontmatter": "^1.0.2",
-    "remark-squeeze-paragraphs": "^4.0.0",
-    "remark-unwrap-texts": "^1.0.2",
-    "revalidator": "^0.3.1",
     "tailwindcss": "^2.0.2",
-    "to-vfile": "^6.1.0",
-    "unist-util-find": "^1.0.2",
-    "unist-util-remove": "^2.0.1",
+    "unified": "^9.2.0",
+    "unist-util-select": "^3.0.4",
     "unist-util-visit": "^2.0.3",
-    "vfile": "^4.2.1",
-    "yaml": "^1.10.0"
+    "vfile": "^4.2.1"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.11",
+    "@tsconfig/node12": "^1.0.7",
     "@types/glob": "^7.1.3",
-    "@types/node": "^14.14.19",
+    "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/revalidator": "^0.3.7",
+    "@types/unist": "^2.0.3",
     "prettier": "^2.2.1",
+    "tsc-alias": "^1.2.0",
     "typescript": "^4.1.3"
   }
 }
