--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "remark-frontmatter": "^2.0.0",
     "remark-parse": "^8.0.3",
     "remark-parse-frontmatter": "^1.0.2",
+    "revalidator": "^0.3.1",
     "tailwindcss": "^2.0.2",
     "unified": "^9.2.0",
     "unist-util-select": "^3.0.4",
