🙈 Ignore autogenerated js from VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
   "files.exclude": {
     "node_modules/": true,
     "yarn.lock": true,
-    ".next/": true
+    ".next/": true,
+    "lib/js/": true
   }
 }
