--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
+    "@types/classnames": "^2.2.11",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
