--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -47,3 +47,29 @@ jobs:
             ${{ runner.os }}-node-${{ env.NODE_VERSION }}-yarn-
       - run: yarn install --frozen-lockfile
       - run: yarn type:check
+
+  lighthouse:
+    name: Lighthouse
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+      - name: Get Yarn cache directory
+        id: get-yarn-cache-dir
+        run: echo "::set-output name=path::$(yarn cache dir)"
+      - name: Cache Yarn dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.get-yarn-cache-dir.outputs.path }}
+          key: "${{ runner.os }}-node-${{ env.NODE_VERSION }}-yarn-\
+            ${{ hashFiles('**/yarn.lock') }}"
+          restore-keys: |
+            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-yarn-
+      - run: yarn install --frozen-lockfile
+      - run: yarn build
+      - run: yarn lighthouse
