--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -74,6 +74,6 @@ jobs:
       - run: yarn build
       - run: |
           yarn global add @lhci/cli
-          yarn lighthouse
+          lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
