--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -73,7 +73,7 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: |
-          yarn global add @lhci/cli
+          npm i -g @lhci/cli
           lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
