--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -70,14 +70,8 @@ jobs:
             ${{ hashFiles('**/yarn.lock') }}"
           restore-keys: |
             ${{ runner.os }}-node-${{ env.NODE_VERSION }}-yarn-
-      - name: Build production
-        run: |
-          yarn install --frozen-lockfile
-          yarn build
-      - name: Install Lighthouse
-        run: |
-          yarn global add @lhci/cli
-          echo "$(yarn global bin)" >> $GITHUB_PATH
-      - run: lhci autorun
+      - run: yarn install --frozen-lockfile
+      - run: yarn build
+      - run: yarn lighthouse
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
