--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next": "^10.0.4",
     "next-seo": "^4.17.0",
     "next-themes": "^0.0.10",
+    "node-fetch": "^2.6.1",
     "postcss": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
