--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/revalidator": "^0.3.7",
     "@types/unist": "^2.0.3",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "tsc-alias": "^1.2.0",
     "typescript": "^4.1.3"
