--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.4",
+    "@tailwindcss/line-clamp": "^0.1.0",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
