--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,6 @@
   "files.exclude": {
     "node_modules/": true,
     "yarn.lock": true,
-    ".next/": true,
-    "lib/js/": true
+    ".next/": true
   }
 }
