--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "yarn build:lib && next dev",
-    "build": "yarn build:lib && next build",
+    "dev": "yarn build:scripts && next dev",
+    "build": "next build",
     "start": "next start",
-    "build:lib": "tsc -p lib/tsconfig.json && tsc-alias -p lib/tsconfig.json",
-    "type:check": "tsc && tsc -p lib/tsconfig.json --noEmit",
+    "build:scripts": "tsc -p tsconfig.scripts.json && tsc-alias -p tsconfig.scripts.json",
+    "type:check": "tsc -p tsconfig.json && tsc -p tsconfig.scripts.json --noEmit",
     "style:check": "prettier --check .",
     "style:format": "prettier --write .",
+    "gen:sitemap": "yarn build:scripts && node js/scripts/generate-sitemap.js",
     "lighthouse": "lhci autorun"
   },
   "engines": {
@@ -79,6 +80,7 @@
     "@types/classnames": "^2.2.11",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.20",
+    "@types/prettier": "^2.1.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/revalidator": "^0.3.7",
