--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "next-seo": "^4.17.0",
     "next-themes": "^0.0.10",
     "postcss": "^8.2.2",
+    "preact": "^10.5.9",
+    "preact-compat": "^3.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
