--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
+    "flatten-tailwindcss-theme": "^0.0.1",
     "glob": "^7.1.6",
     "mdast-util-to-markdown": "^0.6.2",
     "mdast-util-to-string": "^2.0.0",
