--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
-    "flatten-tailwindcss-theme": "^0.0.1",
+    "flatten-tailwindcss-theme": "^0.1.1",
     "glob": "^7.1.6",
     "mdast-util-to-markdown": "^0.6.2",
     "mdast-util-to-string": "^2.0.0",
@@ -75,6 +75,7 @@
     "remark-parse-frontmatter": "^1.0.2",
     "revalidator": "^0.3.1",
     "tailwindcss": "^2.0.2",
+    "tailwindcss-autofill": "^0.1.0",
     "unified": "^9.2.0",
     "unist-util-select": "^3.0.4",
     "unist-util-visit": "^2.0.3",
