--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "revalidator": "^0.3.1",
     "tailwindcss": "^2.0.2",
     "tailwindcss-autofill": "^0.1.0",
+    "tailwindcss-text-fill": "^0.1.2",
     "unified": "^9.2.0",
     "unist-util-select": "^3.0.4",
     "unist-util-visit": "^2.0.3",
