--- a/tsconfig.scripts.json
+++ b/tsconfig.scripts.json
@@ -3,10 +3,7 @@
   "compilerOptions": {
     "outDir": "js",
     "baseUrl": ".",
-    "paths": {
-      "~lib/*": ["lib/*"],
-      "~utils/*": ["utils/*"]
-    }
+    "paths": { "~/*": ["./*"] }
   },
   "exclude": ["node_modules", ".next"],
   "include": ["lib/**/*.ts", "utils/**/*.ts", "scripts/**/*.ts"]
