♻️ Move unified-fake-compiler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "~/*": ["./*"] },
+    "paths": { "@/*": ["packages/*"], "~/*": ["./*"] },
     "allowJs": false,
     "strict": true,
     "alwaysStrict": true,
