--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "tailwindcss-autofill": "^0.1.0",
     "tailwindcss-shadow-fill": "^0.1.0",
     "tailwindcss-text-fill": "^0.1.2",
+    "to-vfile": "^6.1.0",
     "unified": "^9.2.0",
     "unist-util-is": "^4.0.4",
     "unist-util-select": "^3.0.4",
