--- a/tsconfig.scripts.json
+++ b/tsconfig.scripts.json
@@ -6,5 +6,5 @@
     "paths": { "@/*": ["packages/*"], "~/*": ["./*"] }
   },
   "exclude": ["node_modules", ".next"],
-  "include": ["next-env.d.ts", "lib/**/*.ts", "scripts/**/*.ts"]
+  "include": ["next-env.d.ts", "packages/**/*.ts", "scripts/**/*.ts"]
 }
