--- a/tsconfig.scripts.json
+++ b/tsconfig.scripts.json
@@ -3,8 +3,14 @@
   "compilerOptions": {
     "outDir": "js",
     "baseUrl": ".",
-    "paths": { "@/*": ["packages/*"], "~/*": ["./*"] }
+    "paths": { "@/*": ["packages/*"], "~/*": ["./*"] },
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules", ".next"],
-  "include": ["next-env.d.ts", "packages/**/*.ts", "scripts/**/*.ts"]
+  "include": [
+    "next-env.d.ts",
+    "scripts/**/*.ts",
+    "packages/**/*.ts",
+    "utils/**/*.ts"
+  ]
 }
