--- a/js/package.json
+++ b/js/package.json
@@ -42,8 +42,7 @@
         "type:check": "tsc -p tsconfig.json && tsc -p tsconfig.scripts.json --noEmit",
         "style:check": "prettier --check .",
         "style:format": "prettier --write .",
-        "gen:sitemap": "yarn build:scripts && node js/scripts/generate-sitemap.js",
-        "lighthouse": "lhci autorun"
+        "gen:sitemap": "yarn rebuild:scripts && node js/scripts/generate-sitemap.js"
     },
     "engines": {
         "node": "12.x"
@@ -86,7 +85,6 @@
         "vfile": "^4.2.1"
     },
     "devDependencies": {
-        "@lhci/cli": "^0.6.1",
         "@tsconfig/node12": "^1.0.7",
         "@types/classnames": "^2.2.11",
         "@types/glob": "^7.1.3",
@@ -96,7 +94,6 @@
         "@types/react-dom": "^17.0.0",
         "@types/revalidator": "^0.3.7",
         "@types/unist": "^2.0.3",
-        "node-fetch": "^2.6.1",
         "prettier": "^2.2.1",
         "tsc-alias": "^1.2.2",
         "typescript": "^4.1.3"
