--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "classnames": "^2.2.6",
     "flatten-tailwindcss-theme": "^0.1.1",
     "glob": "^7.1.6",
+    "lodash": "^4.17.20",
     "mdast-util-to-markdown": "^0.6.2",
     "mdast-util-to-string": "^2.0.0",
     "next": "^10.0.5",
@@ -85,6 +86,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.11",
     "@types/glob": "^7.1.3",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.21",
     "@types/prettier": "^2.1.6",
     "@types/react": "^17.0.0",
