--- a/package.json
+++ b/package.json
@@ -30,15 +30,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "yarn rebuild:scripts && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build:scripts": "tsc -p tsconfig.scripts.json && tsc-alias -p tsconfig.scripts.json",
-    "rebuild:scripts": "rm -rf js && yarn build:scripts",
-    "type:check": "tsc -p tsconfig.json && tsc -p tsconfig.scripts.json --noEmit",
+    "type:check": "tsc",
     "style:check": "prettier --check .",
-    "style:format": "prettier --write .",
-    "gen:sitemap": "yarn rebuild:scripts && node js/scripts/generate-sitemap.js"
+    "style:format": "prettier --write ."
   },
   "engines": {
     "node": "12.x"
@@ -83,7 +80,6 @@
     "vfile": "^4.2.1"
   },
   "devDependencies": {
-    "@tsconfig/node12": "^1.0.7",
     "@types/classnames": "^2.2.11",
     "@types/glob": "^7.1.3",
     "@types/lodash": "^4.14.168",
@@ -93,7 +89,6 @@
     "@types/react-dom": "^17.0.0",
     "@types/revalidator": "^0.3.7",
     "@types/unist": "^2.0.3",
-    "tsc-alias": "^1.2.2",
     "typescript": "^4.1.3"
   }
 }
